# hexalog

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/actions/get-versions-from-poetry/: action.yml
.github/actions/lint-test-python/: action.yml
.github/workflows/: on_pr_main.yml  on_push_main.yml
examples/: development.py  example_test_logger.py  production.py  service.py
tests/: test_cli_logger.py  test_struct_logger.py  test_tests_logger.py
