[tool.poetry]
name = "python-logger"
version = "0.1.0"
description = ""
authors = ["ericcbonet <ericcbonet@gmail.com>"]
readme = "README.md"
packages = [{include = "python_logger"}]

[tool.poetry.dependencies]
python = "^3.10"
structlog = "23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-mock = "3.12.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
